[package]
name = "gameboy-rs-lib"
version = "0.1.0"
authors = ["Yuta OHWATARI <yyutao88@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[dev-dependencies]
speculate = "*"
rstest = "*"
